dan comments on abstract and first para

--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -26,7 +26,7 @@
 
 %ABSTRACT
 \begin{abstract}
-First words are both an intimate moment between child and caregiver and an important step towards language. Across children, the timing of the first word varies widely, as does its semantic category and phonological complexity, making the first word a window into children's early cognitive and linguistic development. We investigated both the variability and predictability in children's first words across four new datasets. We find, first, that children's first words tend to be earlier than previously estimated: more than 75 percent of children produce their first word before their first birthday. Second, we find a high degree of consistency in the distribution of referents for children's first words, independent of the age at which they are produced. Finally, we show that the particular words that children produce first are are predictable from two linguistic factors: input frequency and phonological complexity. Together, our results suggest a degree of independence between early conceptual and linguistic development.
+A child's first word is an important step towards language. Aggregated across children, the distribution of these first productive uses of language can act as a window into early cognitive and linguistic development. We investigated both the variability and predictability in children's first words across four new datasets. We find, first, that children's first words tend to be earlier than previously estimated: more than 75 percent of children produce their first word before their first birthday. Second, we find a high degree of consistency in the distribution of referents for children's first words, independent of the age at which they are produced. Finally, we show that the particular words that children produce first are are predictable from two linguistic factors: input frequency and phonological complexity. Together, our results suggest a degree of independence between early conceptual and linguistic development.
 
 \textbf{Keywords:}
 Language acquisition, word learning, cognitive development
@@ -35,7 +35,7 @@ Language acquisition, word learning, cognitive development
 %%INTRODUCTION%%%%
 \section{Introduction}
 
-Over the course of their first years, children rapidly go from speechless infants to toddlers producing and learning language at an astounding rate \cite{fenson1994}. Marking the beginning of productive verbal language, a child's first word is an important and measurable insight into what a child is willing and able to talk about at that point in their development. Yet, in contrast to later milestones, children's first words are an intimate moment between child and caregiver that is difficult for external observers to record or measure. Here we leverage large-scale data from parental reports to ask what children's first words reveal about two key issues in early language learning. 
+Over the course of their first years, children rapidly go from speechless infants to toddlers producing and learning language at an astounding rate \cite{fenson1994}. Marking the beginning of productive verbal language, a child's first word is an important and measurable insight into what a child is willing and able to talk about at that point in their development. Yet, in contrast to later behaviors, children's first words often emerge during intimate moments between children and caregivers that are difficult for external observers to record or measure. Here we leverage large-scale data from parental reports to ask what children's first words reveal about two key issues in early language learning. 
 
 First, infants begin to show an aptitude for language from a very early point in. For instance, 1-month-old infants already prefer to listen to child-directed speech over adult-directed speech \cite{cooper1990}. Over the course of the first year, infants are learning to recognize the distinctive sounds and word forms of their native language and to segment these phonetic forms and words \cite{kuhl2004,werker2005}. Additionally, by 6--9 months, many infants already show a tendency to look to matching pictures when they hear common nouns, suggesting early beginnings for form-meaning mapping as well \cite{tincoff2012,bergelson2012}. Infants' language comprehension abilities thus appear to be reasonably well-developed prior to 12 months. As early as 12 weeks, children also begin producing the sounds of their native language in babble, suggesting an early beginning to language production \cite{kuhl2004}. However, developmental norms suggest that the typical child will produce their first word at 12 months. Is this early lag between comprehension and production real, or only apparent?
 
