camera-ready for submission

--- a/paper/fw_cogsci.bib
+++ b/paper/fw_cogsci.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Dan Yurovsky at 2015-02-02 13:53:26 -0800 
+%% Created for Rose Schneider at 2015-02-04 11:21:36 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -257,8 +257,8 @@
 @article{feldman2000,
 	Author = {Feldman, Heidi M and Dollaghan, Christine A and Campbell, Thomas F and Kurs-Lasky, Marcia and Janosky, Janine E and Paradise, Jack L},
 	Date-Added = {2015-01-12 16:26:46 +0000},
-	Date-Modified = {2015-01-12 16:27:00 +0000},
-	Journal = {Child development},
+	Date-Modified = {2015-02-04 19:19:46 +0000},
+	Journal = {Child Development},
 	Number = {2},
 	Pages = {310--322},
 	Publisher = {Wiley Online Library},
@@ -1308,8 +1308,8 @@
 @article{snedeker2007,
 	Author = {Snedeker, J. and Geren, J. and Shafto, C.L.},
 	Date-Added = {2010-07-14 15:33:11 -0400},
-	Date-Modified = {2010-07-14 15:33:46 -0400},
-	Journal = {Psychological science},
+	Date-Modified = {2015-02-04 19:21:27 +0000},
+	Journal = {Psychological Science},
 	Number = {1},
 	Pages = {79},
 	Publisher = {SAGE Publications},
@@ -3161,8 +3161,8 @@
 @article{kuhl2004,
 	Author = {Kuhl, P.K.},
 	Date-Added = {2010-07-03 14:35:45 +0200},
-	Date-Modified = {2010-07-03 14:35:45 +0200},
-	Journal = {Nature reviews neuroscience},
+	Date-Modified = {2015-02-04 19:20:56 +0000},
+	Journal = {Nature Reviews Neuroscienceeviews neuroscience},
 	Number = {11},
 	Pages = {831--843},
 	Publisher = {Nature Publishing Group},
@@ -4762,8 +4762,8 @@
 @article{fenson1994,
 	Author = {Fenson, L. and Dale, P.S. and Reznick, J.S. and Bates, E. and Thal, D.J. and Pethick, S.J. and Tomasello, M. and Mervis, C.B. and Stiles, J.},
 	Date-Added = {2010-06-14 11:39:46 +0200},
-	Date-Modified = {2010-06-14 11:39:53 +0200},
-	Journal = {Monographs of the society for research in child development},
+	Date-Modified = {2015-02-04 19:20:30 +0000},
+	Journal = {Monographs of the Society for Research in Child Developmentesearch in child development},
 	Number = {5},
 	Publisher = {JSTOR},
 	Title = {Variability in early communicative development},
